--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Merlin Changelog
 ===================================
 
+Version 1.0.2
+-----------------------------------
+[fixed] deprecating PHP4 style constructors notices in WordPress 4.3
+
 Version 1.0.1
 -----------------------------------
 [fixed] Merlin Category Posts Widgets causing some warnings on post edit screen
