--- a/languages/merlin.pot
+++ b/languages/merlin.pot
@@ -1,19 +1,24 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Merlin\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-25 12:55+0100\n"
-"PO-Revision-Date: 2015-07-25 12:55+0100\n"
-"Last-Translator: Ulrich Pogson <grapplerulrich@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://themezee.com/\n"
+"POT-Creation-Date: 2015-08-25 15:23+0100\n"
+"PO-Revision-Date: 2015-08-25 15:24+0100\n"
+"Last-Translator: \n"
 "Language-Team: ThemeZee <support@themezee.com>\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-KeywordsList: __;_e;_x;_ex;_n;esc_attr_e;esc_attr__;esc_attr_x;"
-"esc_html_e;esc_html_x;esc_html__\n"
-"X-Poedit-Basepath: .\n"
-"X-Poedit-SourceCharset: UTF-8\n"
 "X-Generator: Poedit 1.5.7\n"
+"X-Poedit-KeywordsList: __;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;"
+"_nx_noop:1,2,3c;esc_attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;"
+"esc_html_x:1,2c\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../\n"
+"X-Textdomain-Support: yes\n"
+"X-Poedit-SearchPath-0: .\n"
 
 #: 404.php:19
 msgid "404: That page can&rsquo;t be found."
@@ -115,10 +120,12 @@ msgid ""
 msgstr ""
 
 #: searchform.php:4
+msgctxt "label"
 msgid "Search for:"
 msgstr ""
 
 #: searchform.php:5
+msgctxt "placeholder"
 msgid "Search &hellip;"
 msgstr ""
 
@@ -554,6 +561,3 @@ msgstr ""
 #: inc/widgets/widget-category-posts-grid.php:484
 msgid "Display post excerpt and read more button"
 msgstr ""
-
-#~ msgid "404 Error: Not found"
-#~ msgstr "404 Error: Not found"
