--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Merlin Changelog
 ===================================
 
+Version 1.0.3
+-----------------------------------
+[improved] code of 404.php and search.php templates
+[improved] phrasing of all translatable text strings
+[added] German language files
+
 Version 1.0.2
 -----------------------------------
 [fixed] deprecating PHP4 style constructors notices in WordPress 4.3
