--- a/changelog.txt
+++ b/changelog.txt
@@ -2,9 +2,14 @@
 Merlin Changelog
 ===================================
 
+Version 1.0.5
+-----------------------------------
+[added] theme support for Widget Bundle Addon Plugin
+[moved] content wrapper to header.php and footer.php
+
 Version 1.0.4
 -----------------------------------
-[moved] register_widget() functions to functions.php
+[moved] register_widget functions to widgets_init action hook to fix widget translation
 [added] readme.txt
 
 Version 1.0.3
