--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Merlin Changelog
 ===================================
 
+Version 1.0.8
+-----------------------------------
+[fixed] styling of broken full width page template
+
 Version 1.0.7
 -----------------------------------
 [added] escaping for translation strings for improved security
