--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,11 @@
 Merlin Changelog
 ===================================
 
+Version 1.1.0
+-----------------------------------
+[added] social icon for newsletter and mailto links
+[fixed] Javascript error on pages without sidebar
+
 Version 1.0.9
 -----------------------------------
 [added] Post Slider page template
