--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Merlin Changelog
 ===================================
 
+Version 1.1.1
+-----------------------------------
+[added] basic support for wooCommerce
+
 Version 1.1.0
 -----------------------------------
 [added] social icon for newsletter and mailto links
