--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Merlin Changelog
 ===================================
 
+Version 1.1.4
+-----------------------------------
+[added] support for Jetpack Infinite Scroll feature
+
 Version 1.1.3
 -----------------------------------
 [added] setting to disable single post navigation
