--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Merlin Changelog
 ===================================
 
+Version 1.1.5
+-----------------------------------
+[updated] flexlider to version 2.6.0
+
 Version 1.1.4
 -----------------------------------
 [added] support for Jetpack Infinite Scroll feature
