--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,9 @@ Merlin Changelog
 
 Version 1.1.5
 -----------------------------------
-[updated] flexlider to version 2.6.0
+[added] support for new custom logo feature from WordPress 4.5
+
+You can upload your logo image on Appearance -> Customize -> Site Identity now.
 
 Version 1.1.4
 -----------------------------------
